--- a/Pang.vcxproj
+++ b/Pang.vcxproj
@@ -19,22 +19,30 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Bonus.cpp" />
     <ClCompile Include="src\Coordinador.cpp" />
     <ClCompile Include="src\Enemigo.cpp" />
     <ClCompile Include="src\EnemigoSimple.cpp" />
+    <ClCompile Include="src\Hombre.cpp" />
+    <ClCompile Include="src\Interaccion.cpp" />
     <ClCompile Include="src\ListaEnemigos.cpp" />
     <ClCompile Include="src\Mundo.cpp" />
     <ClCompile Include="src\ObjetoMovil.cpp" />
+    <ClCompile Include="src\Obstaculo.cpp" />
     <ClCompile Include="src\Pang.cpp" />
     <ClCompile Include="src\Vector2D.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Bonus.h" />
     <ClInclude Include="src\Coordinador.h" />
     <ClInclude Include="src\Enemigo.h" />
     <ClInclude Include="src\EnemigoSimple.h" />
+    <ClInclude Include="src\Hombre.h" />
+    <ClInclude Include="src\Interaccion.h" />
     <ClInclude Include="src\ListaEnemigos.h" />
     <ClInclude Include="src\Mundo.h" />
     <ClInclude Include="src\ObjetoMovil.h" />
+    <ClInclude Include="src\Obstaculo.h" />
     <ClInclude Include="src\Vector2D.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
