--- a/Pang.vcxproj
+++ b/Pang.vcxproj
@@ -23,9 +23,11 @@
     <ClCompile Include="src\Caja.cpp" />
     <ClCompile Include="src\Coordinador.cpp" />
     <ClCompile Include="src\Dimensiones.cpp" />
+    <ClCompile Include="src\Disparo.cpp" />
     <ClCompile Include="src\Enemigo.cpp" />
     <ClCompile Include="src\Hombre.cpp" />
     <ClCompile Include="src\Interaccion.cpp" />
+    <ClCompile Include="src\ListaDisparos.cpp" />
     <ClCompile Include="src\ListaEnemigos.cpp" />
     <ClCompile Include="src\ListaObstaculos.cpp" />
     <ClCompile Include="src\ListaParedes.cpp" />
@@ -47,9 +49,11 @@
     <ClInclude Include="src\ColorRGB.h" />
     <ClInclude Include="src\Coordinador.h" />
     <ClInclude Include="src\Dimensiones.h" />
+    <ClInclude Include="src\Disparo.h" />
     <ClInclude Include="src\Enemigo.h" />
     <ClInclude Include="src\Hombre.h" />
     <ClInclude Include="src\Interaccion.h" />
+    <ClInclude Include="src\ListaDisparos.h" />
     <ClInclude Include="src\ListaEnemigos.h" />
     <ClInclude Include="src\ListaObstaculos.h" />
     <ClInclude Include="src\ListaParedes.h" />
