Boss viene a por ti

--- a/Pang.vcxproj
+++ b/Pang.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="src\Dimensiones.cpp" />
     <ClCompile Include="src\Disparo.cpp" />
     <ClCompile Include="src\Enemigo.cpp" />
+    <ClCompile Include="src\EnemigoBoss.cpp" />
     <ClCompile Include="src\Hombre.cpp" />
     <ClCompile Include="src\Interaccion.cpp" />
     <ClCompile Include="src\ListaBonus.cpp" />
@@ -38,9 +39,6 @@
     <ClCompile Include="src\Mundo.cpp" />
     <ClCompile Include="src\ObjetoMovil.cpp" />
     <ClCompile Include="src\Obstaculo.cpp" />
-    <ClCompile Include="src\ObstaculoAbsoluto.cpp" />
-    <ClCompile Include="src\ObstaculoSimple.cpp" />
-    <ClCompile Include="src\ObstaculoTiempo.cpp" />
     <ClCompile Include="src\Pang.cpp" />
     <ClCompile Include="src\Pared.cpp" />
     <ClCompile Include="src\Plataforma.cpp" />
@@ -58,6 +56,7 @@
     <ClInclude Include="src\Dimensiones.h" />
     <ClInclude Include="src\Disparo.h" />
     <ClInclude Include="src\Enemigo.h" />
+    <ClInclude Include="src\EnemigoBoss.h" />
     <ClInclude Include="src\Hombre.h" />
     <ClInclude Include="src\Interaccion.h" />
     <ClInclude Include="src\ListaBonus.h" />
@@ -68,9 +67,6 @@
     <ClInclude Include="src\Mundo.h" />
     <ClInclude Include="src\ObjetoMovil.h" />
     <ClInclude Include="src\Obstaculo.h" />
-    <ClInclude Include="src\ObstaculoAbsoluto.h" />
-    <ClInclude Include="src\ObstaculoSimple.h" />
-    <ClInclude Include="src\ObstaculoTiempo.h" />
     <ClInclude Include="src\Pared.h" />
     <ClInclude Include="src\Plataforma.h" />
     <ClInclude Include="src\PlataformaPuerta.h" />
